Devel::Cover history

{{$NEXT}}

Release 1.19 - 5 July 2015
 - Get things working with 5.22.0.
 - Test against 5.23.0.
 - Remove dependency on Test::Warn.

Release 1.18 - 6 April 2015
 - Remove dependency on CGI (use HTML::Entities instead) (Lee Johnson).
 - Fix a use of the wrong type of null constant (Zefram) (RT #103102).
 - Link to next uncovered statement in html_basic (H.Merijn Brand) (github 112).
 - Add "provides" to metadata (Ivan Wills) (github 119).

Release 1.17 - 20 September 2014
 - Get cpancover to release quality.
 - Add IRC link to META.
 - Test against 5.20.1, 5.21.1, 5.21.2, 5.21,3 and 5.21.4.
 - Officially support 5.20.1.

Release 1.16 - 17 August 2014
 - Fix segfault in 5.20.0.
 - Improvements to cpancover.
 - Fix vim report to work with recent versions (cono) (github 94).
 - Ignore vim swap files in git (Gábor Szabó) (github 95).
 - Improve help for cover command (Gábor Szabó) (github 96).

Release 1.15 - 1 June 2014
 - Allow -coverage default,-pod option to cover (David Cantrell) (github 89).
 - Get cpancover coverage in docker containers.
 - Add CGI.pm as a prerequisite.
 - Test against 5.20.0 and 5.21.0.
 - Add longer delay in tests to try to appease *BSD.

Release 1.14 - 2 May 2014
 - Fix test failures on OpenBSD, NetBSD and Windows.

Release 1.13 - 28 April 2014
 - Test against 5.19.11.
 - Fix "use 5.xyz;" on pre 5.10 perls (github 87).
 - Round percentages down in summary and reports (also fixes Windows tests).

Release 1.12 - 17 April 2014
 - Fix test failure on OSX, FreeBSD and HPUX (thanks H.Merijn Brand).

Release 1.11 - 13 April 2014
 - Tests should pass when all run in parallel (Kent Fredric) (github 69).
 - Fix problems with using Sereal as DB format.

Release 1.10 - 6 April 2014
 - Test against 5.19.10.
 - Add Sereal backend and use it if available.
 - Support spaces in DB path (Keith Wissing) (github 81).
 - Test against 5.8 on Travis (Slaven Rezić) (github 76).
 - HTML cleanups (H.Merijn Brand).