@@ -46,6 +46,7 @@ Jim Cromie                     jcromie@cpan.org
 John Lightsey                  jd@cpanel.net
 John LoVerso                   jloverso@mathworks.com
 Jonathan "Duke" Leto           jonathan@leto.net
+jpsalvesen
 Kan Fushihara                  kan.fushihara@gmail.com
 Keith Wissing
 Kent Fredric                   kentfredric@gmail.com
